--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
       <version>1.4.1</version>
       <scope>provided</scope> <!-- Don't package this dependency in Fat Jar -->
     </dependency>
+    <dependency> <!-- Spark Streaming -->
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-streaming_2.10</artifactId>
+      <version>1.4.1</version>
+    </dependency>
     <!-- XML Config -->
     <!-- <dependency> -->
     <!--   <groupId>commons-configuration</groupId> -->
@@ -42,13 +47,19 @@
       <version>3.0.3</version>
       <!-- <version>2.11.3</version> -->
     </dependency>
-    <!-- Guava -->
+    <!-- MongoDB -->
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>19.0</version>
-      <type>pom</type>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongo-hadoop-core</artifactId>
+      <version>1.3.0</version>
     </dependency>
+    <!-- Guava -->
+    <!-- <dependency> -->
+    <!--   <groupId>com.google.guava</groupId> -->
+    <!--   <artifactId>guava</artifactId> -->
+    <!--   <version>19.0</version> -->
+    <!--   <type>pom</type> -->
+    <!-- </dependency> -->
       <!-- Mongo-Hadoop -->
       <!-- <dependency> -->
       <!-- 	<groupId>org.mongodb.mongo-hadoop</groupId> -->
