--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,12 @@
       <version>3.0.3</version>
       <!-- <version>2.11.3</version> -->
     </dependency>
-    <!-- MongoDB -->
-    <dependency>
-      <groupId>org.mongodb</groupId>
-      <artifactId>mongo-hadoop-core</artifactId>
-      <version>1.3.0</version>
-    </dependency>
+    <!-- MongoHadoop -->
+    <!-- <dependency> -->
+    <!--   <groupId>org.mongodb</groupId> -->
+    <!--   <artifactId>mongo-hadoop-core</artifactId> -->
+    <!--   <version>1.3.0</version> -->
+    <!-- </dependency> -->
     <!-- Guava -->
     <!-- <dependency> -->
     <!--   <groupId>com.google.guava</groupId> -->
@@ -93,7 +93,8 @@
 	</executions>
 	<configuration>
 	  <finalName>uber-${project.artifactId}-${project.version}</finalName>
-	  <compilerArgument>-Xlint:unchecked</compilerArgument>
+	  <!-- <compilerArgument>-Xlint:unchecked</compilerArgument> -->
+	  <compilerArgument>-Xlint:deprecation</compilerArgument>
 	</configuration>
       </plugin>
     </plugins>
