--- a/cheuk/config/sparkgis.properties
+++ b/cheuk/config/sparkgis.properties
@@ -1,17 +1,21 @@
 # This file contains all DataAccess configurations
 # HDFS properties
-hdfs-coresite-path=/home/hoang/nfsconfig/core-site.xml
-hdfs-hdfssite-path=/home/hoang/nfsconfig/hdfs-site.xml
-hdfs-name-node-ip=10.10.10.11
+hdfs-coresite-path=/home/cochung/hadoop_config_folder/core-site.xml
+hdfs-hdfssite-path=/home/cochung/hadoop_config_folder/hdfs-site.xml
+hdfs-name-node-ip=localhost:54310
 # [OPTIONAL HDFS]
 hdfs-algo-data=/user/fbaig/new-data
 hdfs-hm-results=/user/fbaig/results
 # MongoDB properties
-mongo-host=nfs011
-mongo-port=27015
+mongo-host=localhost
+mongo-port=27017
 mongo-db=u24_segmentation
 mongo-collection=results
-mongo-collection_temp=test_col
 mongo-tempdb=temp_db
 mongo-tempcollection=temp_col
-partition-size=64
+mongo-collection_temp=test_col
+partition-size=2048
+
+
+
+
