--- a/heatmaps/spark-gis-prod/resources/sparkgis.properties
+++ b/heatmaps/spark-gis-prod/resources/sparkgis.properties
@@ -2,10 +2,11 @@
 # HDFS properties
 hdfs-coresite-path=/home/hoang/nfsconfig/core-site.xml
 hdfs-hdfssite-path=/home/hoang/nfsconfig/hdfs-site.xml
+#hdfs-name-node-ip=130.245.124.11
 hdfs-name-node-ip=10.10.10.11
 # [OPTIONAL HDFS]
-hdfs-algo-data=/user/fbaig/new-data
-hdfs-hm-results=/user/fbaig/results
+hdfs-algo-data=/user/fbaig/new-data/
+hdfs-hm-results=/user/fbaig/results/
 # MongoDB properties
 mongo-host=nfs011
 mongo-port=27015
