Ubuntu setup script + Native code  generic depedency on /usr/lib/jvm/java-8-openjdk-amd64

--- a/heatmaps/spark-gis-prod/src/main/java/jni/Makefile
+++ b/heatmaps/spark-gis-prod/src/main/java/jni/Makefile
@@ -3,7 +3,7 @@ UNAME		= $(shell uname)
 OPTFLAGS	= -O2 -Wno-write-strings -Wno-deprecated-declarations
 #INCBASE		= -I. -I extlib/include
 #LIBBASE		= -lspatialindex -lgeos -L extlib/lib
-JNIINC		= -I/cm/shared/apps/jdk1.8.0_45/include -I/cm/shared/apps/jdk1.8.0_45/include/linux
+JNIINC		= -I${JAVA_HOME}/include -I${JAVA_HOME}/include/linux
 INCBASE		= -I. -I/usr/local/lib -I ${SATO_INC_PATH}
 LIBBASE		= -lspatialindex -lgeos -L/usr/local/lib -L ${SATO_LIB_PATH}
 
