--- a/heatmaps/spark-gis-prod/pom.xml
+++ b/heatmaps/spark-gis-prod/pom.xml
@@ -1,15 +1,15 @@
 <project>
   <groupId>bmi.stonybrook</groupId>
-  <artifactId>spark-gis</artifactId>
+  <artifactId>sparkgis</artifactId>
   <modelVersion>4.0.0</modelVersion>
-  <name>Spark-GIS</name>
+  <name>SparkGIS</name>
   <packaging>jar</packaging>
   <version>1.0</version>
   <dependencies>
     <dependency> <!-- Spark dependency -->
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_2.10</artifactId>
-      <version>2.0.0</version>
+      <artifactId>spark-core_2.11</artifactId>
+      <version>2.1.0</version>
       <scope>provided</scope> <!-- Don't package this dependency in Fat Jar -->
     </dependency>
     <!-- Command Line -->
@@ -23,12 +23,6 @@
       <artifactId>jts</artifactId>
       <version>1.13</version>
     </dependency>
-    <!-- HDFS (already available in Spark) -->
-    <!-- <dependency>  -->
-    <!--   <groupId>org.apache.hadoop</groupId> -->
-    <!--   <artifactId>hadoop-hdfs</artifactId> -->
-    <!--   <version>2.6.0</version> -->
-    <!-- </dependency> -->
     <!-- MongoDB -->
     <dependency>
       <groupId>org.mongodb</groupId>
@@ -77,7 +71,7 @@
       <!-- 	  </execution> -->
       <!-- 	</executions> -->
       <!-- </plugin> -->
-      
+
       <!-- Fat Jar -->
       <plugin>
       	<groupId>org.apache.maven.plugins</groupId>
@@ -92,11 +86,43 @@
       	  </execution>
       	</executions>
       	<configuration>
+	  <transformers>
+	    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+	      <manifestEntries>
+		<Class-Path>../conf/</Class-Path>
+	      </manifestEntries>
+	    </transformer>
+	  </transformers>
       	  <finalName>uber-${project.artifactId}-${project.version}</finalName>
       	  <compilerArgument>-Xlint:unchecked</compilerArgument>
       	</configuration>
       </plugin>
-      
+
+      <!-- <plugin> -->
+      <!-- 	<artifactId>maven-assembly-plugin</artifactId> -->
+      <!-- 	<configuration> -->
+      <!-- 	  <archive> -->
+      <!-- 	    <manifestEntries> -->
+      <!--         <Class-Path>config/</Class-Path> -->
+      <!--       </manifestEntries> -->
+      <!-- 	  </archive> -->
+      <!-- 	  <descriptorRefs> -->
+      <!-- 	    <descriptorRef>jar-with-dependencies</descriptorRef> -->
+      <!-- 	  </descriptorRefs> -->
+      <!-- 	</configuration> -->
+      <!-- 	<executions> -->
+      <!--     <execution> -->
+      <!--       <id>make-assembly</id> -->
+      <!--       <phase>package</phase>  -->
+      <!--       <goals> -->
+      <!--         <goal>single</goal> -->
+      <!--       </goals> -->
+      <!--     </execution> -->
+      <!--   </executions> -->
+      <!-- </plugin> -->
+
+
+
     </plugins>
   </build>
 </project>
