--- a/heatmaps/spark-gis-prod/pom.xml
+++ b/heatmaps/spark-gis-prod/pom.xml
@@ -28,7 +28,6 @@
       <groupId>org.mongodb</groupId>
       <artifactId>mongo-java-driver</artifactId>
       <version>3.0.3</version>
-      <!-- <version>2.11.3</version> -->
     </dependency>
       <!-- Mongo-Hadoop -->
       <!-- <dependency> -->
@@ -49,28 +48,6 @@
 	  <compilerArgument>-Xlint:unchecked</compilerArgument>
 	</configuration>
       </plugin>
-
-      <!-- Copy dependencies to a folder -->
-
-      <!-- <plugin> -->
-      <!-- 	<groupId>org.apache.maven.plugins</groupId> -->
-      <!-- 	<artifactId>maven-dependency-plugin</artifactId> -->
-      <!-- 	<executions> -->
-      <!-- 	  <execution> -->
-      <!-- 	    <id>copy-dependencies</id> -->
-      <!-- 	    <phase>prepare-package</phase> -->
-      <!-- 	    <goals> -->
-      <!-- 	      <goal>copy-dependencies</goal> -->
-      <!-- 	    </goals> -->
-      <!-- 	    <configuration> -->
-      <!-- 	      <outputDirectory>${project.build.directory}/lib</outputDirectory> -->
-      <!-- 	      <overWriteReleases>false</overWriteReleases> -->
-      <!-- 	      <overWriteSnapshots>false</overWriteSnapshots> -->
-      <!-- 	      <overWriteIfNewer>true</overWriteIfNewer> -->
-      <!-- 	    </configuration> -->
-      <!-- 	  </execution> -->
-      <!-- 	</executions> -->
-      <!-- </plugin> -->
 
       <!-- Fat Jar -->
       <plugin>
@@ -98,6 +75,42 @@
       	</configuration>
       </plugin>
 
+      <!-- Generate Javadoc -->
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-javadoc-plugin</artifactId>
+	<version>2.10.4</version>
+	<executions>
+	  <execution>
+	    <id>attach-javadocs</id>
+	    <goals>
+	      <goal>jar</goal>
+	    </goals>
+	  </execution>
+	</executions>
+      </plugin>
+      
+      <!-- Copy dependencies to a folder -->
+      <!-- <plugin> -->
+      <!-- 	<groupId>org.apache.maven.plugins</groupId> -->
+      <!-- 	<artifactId>maven-dependency-plugin</artifactId> -->
+      <!-- 	<executions> -->
+      <!-- 	  <execution> -->
+      <!-- 	    <id>copy-dependencies</id> -->
+      <!-- 	    <phase>prepare-package</phase> -->
+      <!-- 	    <goals> -->
+      <!-- 	      <goal>copy-dependencies</goal> -->
+      <!-- 	    </goals> -->
+      <!-- 	    <configuration> -->
+      <!-- 	      <outputDirectory>${project.build.directory}/lib</outputDirectory> -->
+      <!-- 	      <overWriteReleases>false</overWriteReleases> -->
+      <!-- 	      <overWriteSnapshots>false</overWriteSnapshots> -->
+      <!-- 	      <overWriteIfNewer>true</overWriteIfNewer> -->
+      <!-- 	    </configuration> -->
+      <!-- 	  </execution> -->
+      <!-- 	</executions> -->
+      <!-- </plugin> -->
+      
       <!-- <plugin> -->
       <!-- 	<artifactId>maven-assembly-plugin</artifactId> -->
       <!-- 	<configuration> -->
