--- a/heatmaps/spark-gis-prod/pom.xml
+++ b/heatmaps/spark-gis-prod/pom.xml
@@ -5,6 +5,11 @@
   <name>SparkGIS</name>
   <packaging>jar</packaging>
   <version>1.0</version>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
   <dependencies>
     <dependency> <!-- Spark dependency -->
       <groupId>org.apache.spark</groupId>
