removed redundant libraries and test code

--- a/heatmaps/spark-gis-prod/src/main/java/jni/Makefile
+++ b/heatmaps/spark-gis-prod/src/main/java/jni/Makefile
@@ -1,11 +1,13 @@
 
 UNAME		= $(shell uname)
-OPTFLAGS	= -O2 -Wno-write-strings -Wno-deprecated-declarations
+OPTFLAGS	= -O2 -Wno-write-strings -Wno-deprecated-declarations -Wall
 JNIINC		= -I${JAVA_HOME}/../include -I${JAVA_HOME}/../include/linux
-INCBASE		= -I. -I${SATO_INC_PATH}
-LIBBASE		= -L${SATO_LIB_PATH}  -lgeos -lspatialindex
+INCBASE		= -I. -I${SPGIS_INC_PATH}
+LIBBASE		= -L${SPGIS_LIB_PATH}  -lgeos -lspatialindex
 
-CFLAGS      = $(OPTFLAGS) $(INCBASE) $(INCFLAGS)
+INCFLAGS	= $(JNIINC) $(INCBASE)
+CFLAGS		= -fpic -shared
+#CFLAGS      = $(OPTFLAGS) $(INCBASE)
 LDFLAGS     = $(LIBBASE)
 
 CC = g++
@@ -14,10 +16,7 @@ all: gis
 
 # gis: native/resque.cpp native/partitionMapperJoin.cpp include/partitionMapperJoin.hpp include/resque.hpp include/hadoopgis.h include/tokenizer.h include/resquecommon.h gis.cpp
 # 	$(CC) -std=c++0x -shared -fpic gis.cpp native/partitionMapperJoin.cpp native/resque.cpp -o libgis.so $(JNIINC) $(CFLAGS) $(LDFLAGS) $(OPTFLAGS)
-gis: native/resque.cpp include/resque.hpp include/hadoopgis.h include/tokenizer.h include/resquecommon.h gis.cpp
-	$(CC) -std=c++0x -shared -fpic gis.cpp native/resque.cpp -o libgis.so $(JNIINC) $(CFLAGS) $(LDFLAGS) $(OPTFLAGS)
-#$(CC) -std=c++0x -fPIC $(JNIINC) $(INCBASE) gis.cpp native/resque.cpp -o gis $(OPTFLAGS) $(LDFLAGS)
-#$(CC) -shared -o ./bin/libgis.so  gis.o -Wl,-rpath,${SATO_LIB_PATH} $(CFLAGS) $(LDFLAGS) $(OPTFLAGS)
-
+gis: native/resque.cpp include/resque.hpp include/gis.hpp gis.cpp
+	$(CC) -std=c++0x $(CFLAGS) gis.cpp native/resque.cpp -o libgis.so $(INCFLAGS) $(OPTFLAGS) $(LDFLAGS)
 clean:
 	@rm -f *.o hgtiler mbbextractor
