started binary data processing

--- a/heatmaps/spark-gis-prod/pom.xml
+++ b/heatmaps/spark-gis-prod/pom.xml
@@ -45,6 +45,7 @@
   
   <build>
     <plugins>
+
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -80,6 +81,20 @@
       	</configuration>
       </plugin>
 
+      <!-- compile tests into a JAR -->
+      <!-- <plugin> -->
+      <!--   <groupId>org.apache.maven.plugins</groupId> -->
+      <!--   <artifactId>maven-jar-plugin</artifactId> -->
+      <!--   <version>3.0.2</version> -->
+      <!--   <executions> -->
+      <!--     <execution> -->
+      <!--       <goals> -->
+      <!--         <goal>test-jar</goal> -->
+      <!--       </goals> -->
+      <!--     </execution> -->
+      <!--   </executions> -->
+      <!-- </plugin> -->
+      
       <!-- Generate Javadoc -->
       <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
