rhel deploy bugs fixes

--- a/pom.xml
+++ b/pom.xml
@@ -96,19 +96,19 @@
       <!-- </plugin> -->
       
       <!-- Generate Javadoc -->
-      <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-javadoc-plugin</artifactId>
-	<version>2.10.4</version>
-	<executions>
-	  <execution>
-	    <id>attach-javadocs</id>
-	    <goals>
-	      <goal>jar</goal>
-	    </goals>
-	  </execution>
-	</executions>
-      </plugin>
+      <!-- <plugin> -->
+      <!-- 	<groupId>org.apache.maven.plugins</groupId> -->
+      <!-- 	<artifactId>maven-javadoc-plugin</artifactId> -->
+      <!-- 	<version>2.10.4</version> -->
+      <!-- 	<executions> -->
+      <!-- 	  <execution> -->
+      <!-- 	    <id>attach-javadocs</id> -->
+      <!-- 	    <goals> -->
+      <!-- 	      <goal>jar</goal> -->
+      <!-- 	    </goals> -->
+      <!-- 	  </execution> -->
+      <!-- 	</executions> -->
+      <!-- </plugin> -->
       
       <!-- Copy dependencies to a folder -->
       <!-- <plugin> -->
