keep spatial data as binary array + HM partitioner bug fixed +native processing for binary data NOT DONE

--- a/conf/sparkgis.properties
+++ b/conf/sparkgis.properties
@@ -1,11 +1,19 @@
-# This file contains all DataAccess configurations
-# HDFS properties
+# # This file contains all DataAccess configurations
+# # HDFS properties
+# hdfs-coresite-path=/usr/local/hadoop/etc/hadoop/core-site.xml
+# hdfs-hdfssite-path=/usr/local/hadoop/etc/hadoop/hdfs-site.xml
+# hdfs-name-node-ip=127.0.0.1:54310
+# # [OPTIONAL HDFS]
+# hdfs-algo-data=/sparkgis/pia_small/
+# hdfs-hm-results=/sparkgis/pia/results_small/
+# [BMI Cluster]
 hdfs-coresite-path=/usr/local/hadoop/etc/hadoop/core-site.xml
 hdfs-hdfssite-path=/usr/local/hadoop/etc/hadoop/hdfs-site.xml
-hdfs-name-node-ip=127.0.0.1:54310
+hdfs-name-node-ip=10.10.10.11
 # [OPTIONAL HDFS]
-hdfs-algo-data=/sparkgis/pia_small/
-hdfs-hm-results=/sparkgis/pia/results_small/
+hdfs-algo-data=/user/fbaig/new-data/
+hdfs-hm-results=/user/fbaig/new-results/
+
 # MongoDB properties
 mongo-host=nfs011
 mongo-port=27015
