minor bug fixes

--- a/src/main/java/jni/Makefile
+++ b/src/main/java/jni/Makefile
@@ -15,7 +15,7 @@ all: gis
 
 # gis: native/resque.cpp native/partitionMapperJoin.cpp include/partitionMapperJoin.hpp include/resque.hpp include/hadoopgis.h include/tokenizer.h include/resquecommon.h gis.cpp
 # 	$(CC) -std=c++0x -shared -fpic gis.cpp native/partitionMapperJoin.cpp native/resque.cpp -o libgis.so $(JNIINC) $(CFLAGS) $(LDFLAGS) $(OPTFLAGS)
-gis: native/resque.cpp include/resque.hpp native/binary_resque.cpp include/binary_resque.hpp include/gis.hpp gis.cpp
-	$(CC) -std=c++0x $(CFLAGS) gis.cpp native/resque.cpp native/binary_resque.cpp -o libgis.so $(INCFLAGS) $(OPTFLAGS) $(LDFLAGS)
+gis: native/resque.cpp include/resque.hpp include/gis.hpp gis.cpp
+	$(CC) -std=c++0x $(CFLAGS) gis.cpp native/resque.cpp -o libgis.so $(INCFLAGS) $(OPTFLAGS) $(LDFLAGS)
 clean:
 	@rm -f *.o hgtiler mbbextractor
