--- a/conf/sparkgis.properties
+++ b/conf/sparkgis.properties
@@ -4,6 +4,12 @@
 # hdfs-algo-data=/sparkgis/pia_small/
 # hdfs-hm-results=/sparkgis/pia/results_small/
 # [BMI Cluster]
-hdfs-name-node-ip=10.10.10.11
-hdfs-algo-data=/user/fbaig/new-data/
-hdfs-hm-results=/user/fbaig/new-results/
+# This file contains all DataAccess configurations
+# # HDFS properties
+hdfs-name-node-ip=127.0.0.1:54310
+# hdfs-algo-data=/sparkgis/pia_small/
+# hdfs-hm-results=/sparkgis/pia/results_small/
+# [BMI Cluster]
+hdfs-name-node-ip=127.0.0.1:54310
+hdfs-algo-data=/sparkgis/sample_data/
+hdfs-hm-results=/sparkgis/sample_results/
